feat: "refatorando a classe service para tratamento de Exception"